# RootGuard

./: .gitignore  3.0.1  50）  ADB_SETUP.md  ADB_手动安装指南.md  APK下载指南.md  BUILD.md  CHANGELOG.md  CHANGELOG_v1.4.38.md  CHANGELOG_v1.4.43.md  DexExtractor.java  DexMerger.java  ExtractLspoed.java  GITHUB_GUIDE.bat  GITHUB_SETUP.md  GitHub Actions 快速修复.bat  GitHub修复指南.md  GitHub错误排查.md  HMA-OSS分析报告与集成方案.md  HMA_Config_fixed.json  HyperOS应用列表修复总结.md  HyperOS应用列表问题分析总结.md  INSTALL.md  INSTALL_PandaSU.bat  KernelSU_RootService_测试指南.md  KernelSU安装功能分析.md  KernelSU应用列表加载逻辑分析.md  KernelSU支持实现报告.md  KernelSU日志提取指南.md  LSPOED_MIGRATION.md  MANUAL_INSTALL.md  PROJECT_INFO.md  PROJECT_SUMMARY.md  PandaSU-v2.0.1-安装说明.md  PandaSU-v2.0.2-更新说明.md  PandaSU-v2.0.3-更新说明.md  PandaSU-v2.0.5-更新说明.md  PandaSU-v2.0.6-保守预设修复说明.md  PandaSU-v2.0.7-逻辑重构与紧急修复说明.md  PandaSU-v2.0.8-环境安全评分修复说明.md  (+223 more)
AppListTest/: README.md  README_使用说明.md  build.bat  build.ps1  gradle.properties  quick_test.md  run_test.bat  settings.gradle  settings.gradle.kts  test_applist.py  快速测试.bat  独立测试应用说明.md
LogExtractor/: gradlew  settings.gradle
PandaSU-LSPosed/: build.gradle  settings.gradle
PandaSU-LSPosed-Helper/: module.prop  settings.gradle
PandaSU-System-Helper/: README.md  README_Zygisk.md  build-module.bat  module.prop  (+5 more)
PandaSU-System-Helper-Package/: customize.sh  system.prop
app/src/main/cpp/: CMakeLists.txt  map_parser.cpp  mount_ns.cpp  mountinfo_parser.cpp  plt_hook.cpp  turbo_jni.cpp
app/src/main/cpp/include/: logging.hpp  map_parser.hpp  mount_ns.hpp  mountinfo_parser.hpp  plt_hook.hpp  utils.hpp
(+31869 files in other folders)
